# video-transcription-pro

./: .dockerignore  .gitignore  CONTRIBUTING.md  DOCKER.md  Dockerfile  INSTALL.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements-torch-cpu.txt  requirements-torch-gpu.txt  requirements.txt  setup.py  test_docker.py  test_installation.py  test_linux.py  test_windows.py
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml
docker/: Dockerfile.cpu  Dockerfile.gpu  README.md
docs/: PROJECT_STRUCTURE.md  docker-usage.md
examples/: advanced_pipeline.py  basic_usage.py  batch_processing.py  getting_started.md
scripts/: install_gpu.py  monitor-build-performance.sh
src/video_transcription/: __init__.py  batch_processor.py  cli.py  formatter.py  pipeline.py  speaker_identifier.py  transcriber.py
tests/: __init__.py  test_video_transcription.py
tests/integration/: __init__.py  test_installation.py  test_linux.py  test_windows.py
tests/unit/: __init__.py
